# bazel-experiments

./: .gitignore  README.md
bzlmod-module-extensions/crash-with-label-relative-call/: README.md
bzlmod-module-extensions/crash-with-label-relative-call/module/: BUILD.bazel  MODULE.bazel  extensions.bzl
bzlmod-module-extensions/crash-with-label-relative-call/workspace/: BUILD.bazel  MODULE.bazel
bzlmod-prebuilt-modules/: README.md
bzlmod-prebuilt-modules-1/: README.md
bzlmod-prebuilt-modules-1/prebuilt/bazel-skylib-1.0.3/: MODULE.bazel  WORKSPACE.bazel
bzlmod-prebuilt-modules-1/prebuilt/platforms-0.0.4/: MODULE.bazel
bzlmod-prebuilt-modules/bad-registry-url/: README.md
bzlmod-prebuilt-modules/bad-registry-url/test-1/: .bazelrc  BUILD.bazel
bzlmod-prebuilt-modules/local-module-directories/: README.md
bzlmod-prebuilt-modules/local-module-directories/test-1/: .bazelrc  MODULE.bazel
bzlmod-prebuilt-modules/local-module-extensions/: README.md
bzlmod-prebuilt-modules/local-module-extensions/prebuilt/: platforms-0.0.4
bzlmod-prebuilt-modules/local-module-extensions/prebuilt/all_project_deps/: MODULE.bazel  extensions.bzl
bzlmod-prebuilt-modules/local-module-extensions/test-1/: MODULE.bazel
bzlmod-prebuilt-modules/local-registry-with-files/: README.md  generate-files.sh  prebuilt
bzlmod-prebuilt-modules/local-registry-with-files/registry/modules/bazel_skylib/1.0.3/: source.json
bzlmod-prebuilt-modules/local-registry-with-files/test-1/: MODULE.bazel
bzlmod-prebuilt-modules/local-registry-with-urls/: README.md  generate-bazelrc.sh
bzlmod-prebuilt-modules/local-registry-with-urls/test-1/: .gitignore  rules.bzl
configurations/custom-flags-with-define/: BUILD.bazel  README.md  rules.bzl
pic-vs-pie/: BUILD.bazel  README.md  run_test.sh
pic-vs-pie/experiment-1/: README.md
pic-vs-pie/experiment-1/src/: main.cc
pic-vs-pie/src/: pic_mode.cc  pic_mode.h
pic-vs-pie/transitions/: defs.bzl  run_tests.sh
pic-vs-pie/transitions-1/: README.md
pic-vs-pie/transitions-1/src/: program.cc  sharedlib.cc
pic-vs-pie/transitions-2/: README.md  defs.bzl  run_tests.sh
pic-vs-pie/transitions-2/src/: BUILD.bazel  program.cc  program2.cc
pic-vs-pie/transitions-3/: README.md  run_tests.sh
pic-vs-pie/transitions-3/src/: generate_common_lib.sh
pic-vs-pie/transitions-4/: README.md  defs.bzl  run_tests.sh
pic-vs-pie/transitions-4/src/: BUILD.bazel  sharedlib.cc
pic-vs-pie/transitions-5/: README.md  defs.bzl  run_tests.sh
pic-vs-pie/transitions-with-sources-generating-genrule/: README.md
pic-vs-pie/transitions-with-sources-generating-genrule-2/: README.md  defs.bzl
pic-vs-pie/transitions-with-sources-generating-genrule-2/src/: BUILD.bazel
pic-vs-pie/transitions/src/: BUILD.bazel  common.cc  common.h
repository-rules/error-using-workspace_root/: BUILD.bazel  README.md  WORKSPACE.bazel  repository_rules.bzl
runfiles/bazel6-data-deps-runfiles-regression/: BUILD.bazel  README.md  defs.bzl
